test/runnable/parentest.nt
module parentest;

macro import std.macro.assert;

struct S
{
    int a;
}

void main() {
    int b = 4;
    auto s = S(2);
    void test() {
        assert(s.(a + b) == 6);
    }
    test;
}
