test/fail_compilation/named_arg_struct.nt
module named_arg_struct;

struct S {
    void foo(int i) { }
}

void main() {
    S().foo(j=1);
}
